--- a/.github/workflows/login-and-token-exchange-sample.yml
+++ b/.github/workflows/login-and-token-exchange-sample.yml
@@ -29,6 +29,7 @@ jobs:
         BODY=$(jq -n --arg username "lparezanin" --arg tokenType "ApiKey" \
           '{username: $username, tokenType: $tokenType}')
         echo "📦 Request body: $BODY"
+        echo "📦 Request headers: 
         API_KEY_RESPONSE=$(curl -s -X POST "https://dev.nugettest.org/api/v2/token" \
           -H "Authorization: Bearer ${{ steps.get-token.outputs.token }}" \
           -H "Content-Type: application/json" \
@@ -38,7 +39,7 @@ jobs:
 
         
     - name: NuGet Login
-      uses: Lanaparezanin/nuget-login-preview@v10
+      uses: Lanaparezanin/nuget-login-preview@v11
       id: login
       with:
         user: lparezanin
