--- a/.github/workflows/login-and-token-exchange-sample.yml
+++ b/.github/workflows/login-and-token-exchange-sample.yml
@@ -29,7 +29,7 @@ jobs:
         BODY=$(jq -n --arg username "lparezanin" --arg tokenType "ApiKey" \
           '{username: $username, tokenType: $tokenType}')
         echo "📦 Request body: $BODY"
-        echo "📦 Request headers: 
+        echo "📦 Request headers: "
         API_KEY_RESPONSE=$(curl -s -X POST "https://dev.nugettest.org/api/v2/token" \
           -H "Authorization: Bearer ${{ steps.get-token.outputs.token }}" \
           -H "Content-Type: application/json" \
