--- a/.github/workflows/login-and-token-exchange-sample.yml
+++ b/.github/workflows/login-and-token-exchange-sample.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
         
     - name: NuGet Login
-      uses: Lanaparezanin/nuget-login-preview@v24
+      uses: Lanaparezanin/login@v1
       id: login
       with:
         user: lparezanin
