--- a/.github/workflows/login-and-token-exchange-sample.yml
+++ b/.github/workflows/login-and-token-exchange-sample.yml
@@ -17,7 +17,7 @@ jobs:
       uses: NuGet/login@v1
       id: login
       with:
-        user: lanaparezanin
+        user: lparezanin
         audience: https://dev.nugettest.org
         token-service-url: https://dev.nugettest.org/api/v2/token
 
