--- a/.github/workflows/login-and-token-exchange-sample.yml
+++ b/.github/workflows/login-and-token-exchange-sample.yml
@@ -23,7 +23,4 @@ jobs:
 
 
     - name: Push package
-      run: |
-        dotnet nuget push ./src/*.nupkg \
-          --api-key "${{ steps.login.outputs.NUGET_API_KEY }}" \
-          --source https://dev.nugettest.org/api/v2/package
+      run: dotnet nuget push ./src/*.nupkg --api-key "${{ steps.login.outputs.NUGET_API_KEY }}" --source https://dev.nugettest.org/api/v2/package
